concord_macros/tests/trybuild/fail/codegen/reserved_endpoint_method.stderr
error: generated public API name `request` for root endpoint method conflicts with generated client method in generated client
 --> tests/trybuild/fail/codegen/reserved_endpoint_method.rs:7:12
  |
7 |         as request
  |            ^^^^^^^
